# week6/iam/internal/api/user/v1/get_all_users.go
@@ -1,0 +1,24 @@
+package v1
+
+import (
+	"context"
+
+	commonv1 "github.com/mbakhodurov/homeworks2/week6/shared/pkg/proto/common/v1"
+	userv1 "github.com/mbakhodurov/homeworks2/week6/shared/pkg/proto/user/v1"
+
+	"github.com/mbakhodurov/homeworks2/week6/iam/internal/api/converter"
+)
+
+func (a *api) GetAllUsers(ctx context.Context, _ *userv1.GetAllUsersRequest) (*userv1.GetAllUsersResponse, error) {
+	users, err := a.userService.GetAllUsers(ctx)
+	if err != nil {
+		return nil, err
+	}
+
+	dtos := make([]*commonv1.User, 0, len(users))
+	for _, u := range users {
+		dtos = append(dtos, converter.UserToDTO(u))
+	}
+
+	return &userv1.GetAllUsersResponse{Users: dtos}, nil
+}
